# FuseFSS

./: .gitignore  CMakeLists.txt  README.md
bench/: accuracy_compare.py
bench/configs/: accuracy_table4.json
docs/: IMPLEMENTATION_MAP.md  REPRODUCIBILITY.md  SECURITY_MODEL.md
ezpc_upstream/GPU-MPC/experiments/sigma/: sigma.cu
ezpc_upstream/GPU-MPC/ext/sytorch/ext/sci/src/: cleartext_library_float.cpp  library_float_secfloat.cpp
ezpc_upstream/GPU-MPC/ext/sytorch/include/sytorch/backend/: llama_base.h
include/suf/: gpu_kernels.hpp  operator_spec.hpp  pfss_plan.hpp  postprocess.hpp  secure_program.hpp  sigma_bridge.hpp
scripts/: build_sigma_pair.sh  compare_activation_fair.py  plot_batch_scaling.py  repro_eval_latest.py  run_batch_scaling.py
src/: fusefss_sigma_bridge.cu  secure_program.cpp
src/bench/: bench_fusefss_gpu.cpp  bench_fusefss_model.cpp  bench_fusefss_security_canary.cpp
src/cuda/: pfss_kernels.cu
src/tests/: test_operator_frontend.cpp  test_secure_interval_lut.cpp
